--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,7 @@ a:hover::after { content: "\5D"; right:  -20px; }
 
 .jzyyxt-toolbar-skin-blue{
 	height: 40px;
-    background: #198DDD;
+    background: linear-gradient(to bottom, #5ba2db 0%, #4bbfe9 100%, #5ba2db 100%);
     border-bottom: none;
 }
 
@@ -140,6 +140,8 @@ a:hover::after { content: "\5D"; right:  -20px; }
 .main-content {
     width: 1170px;
     margin: 30px auto;
+    /*background-image: url(../images/poster_2.png);
+    background-size:cover;*/
 }
 
 .clearfix:before, .clearfix:after {
@@ -158,6 +160,16 @@ a:hover::after { content: "\5D"; right:  -20px; }
 
 .content_r {
 	width: 850px;	
+	
+}
+
+#right-content {
+	/*内阴影*/
+	/*box-shadow: inset 0px 0px 30px #808080;*/
+	/*外阴影*/
+	box-shadow:0px 0px 8px #808080;
+	
+	
 }
 
 .fr {
@@ -168,6 +180,9 @@ a:hover::after { content: "\5D"; right:  -20px; }
 .categ {
     background: #fff;
     margin-top: 10px;
+    box-shadow:0px 0px 8px #808080;
+    
+   
 }
 
 
@@ -261,4 +276,13 @@ a:-webkit-any-link {
     padding-top:10px;
 }
 
+/*----------------------------------book_chair.php------------------------------------------*/
+
+.chair-wrapper {
+	height: 400px;
+	background: linear-gradient(to bottom, rgba(204,204,204,1) 0%,rgba(255,255,255,1) 99%);
+	margin:0 10px;
+	border-radius:5px;
+	
+}
 
